Add field CompactionCandidate.compactionInterval